--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,31 @@
 :root{
   --primary-color: linear-gradient(135deg, #6a11cb, #2575fc);
   --secondary-color: #2ecc71;
-  --background-color: #f1c40f;
+  --background-color: #0dcaf00f;
 
 }
 a{
   text-decoration: none;
   color: #fff;
 }
-a:hover{
-  color: #000;
+
+.heading{
+  color: purple;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 600;
+  font-size: 2.5rem;
+  margin-top: 10px;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+.button-all{
+  background: var(--primary-color);
+  color: white;
+  letter-spacing: 2;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  margin-right:20px;
 }
 .dashboard-title{
   border-bottom: 2px solid white;
@@ -65,4 +81,16 @@ a:hover{
 }
 .dropdown-icon{
   margin-right: 10px;
+}
+.id-student{
+  display: block;
+  background: var(--primary-color);
+  padding: 6px;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  text-align: center;
+}
+.content{
+  background-color: var(--background-color);
 }
